--- a/Event.html
+++ b/Event.html
@@ -25,9 +25,9 @@
 <FONT SIZE=4>
   
 <FONT SIZE=5> <A HREF=INDEX.HTML>HOME</A>||</FONT>
-<A HREF=event.HTML.html>EVENT</A>||
-<A HREF=CONTACT.HTML>CONTACT US</A>||
-<A HREF=Product.HTML>PRODUCT</A>
+<A HREF=Event.html>EVENT</A>||
+<A HREF=CONTACT.html>CONTACT US</A>||
+<A HREF=Product.html>PRODUCT</A>
 <TD>
 <TR>
   
