--- a/landingpage..html
+++ b/landingpage..html
@@ -19,9 +19,9 @@
 <FONT SIZE=5>
   
 <FONT SIZE=5> <A HREF=INDEX.HTML>HOME</A>||</FONT>
-<A HREF=Event.HTML.html>EVENT</A>||
-<A HREF=CONTACT.HTML>CONTACT US</A>||
-<A HREF=Product.HTML>PRODUCT</A>
+<A HREF=Event.html>EVENT</A>||
+<A HREF=CONTACT.html>CONTACT US</A>||
+<A HREF=Product.html>PRODUCT</A>
 <TD>
 <TR>
   
