--- a/landingpage..html
+++ b/landingpage..html
@@ -18,7 +18,7 @@
 <TD COLSPAN=7><CENTER>
 <FONT SIZE=5>
   
-<FONT SIZE=5> <A HREF=INDEX.HTML>HOME</A>||</FONT>
+<FONT SIZE=5> <A HREF=index.html>HOME</A>||</FONT>
 <A HREF=Event.html>EVENT</A>||
 <A HREF=CONTACT.html>CONTACT US</A>||
 <A HREF=Product.html>PRODUCT</A>
